sandbox/geos/fp_geos_c.h


typedef struct GEOSContextHandle_HS *GEOSContextHandle_t;
typedef void (*GEOSMessageHandler)(const char *fmt, ...);
typedef struct GEOSGeom_t GEOSGeometry;
typedef struct GEOSPrepGeom_t GEOSPreparedGeometry;
typedef struct GEOSCoordSeq_t GEOSCoordSequence;
typedef struct GEOSSTRtree_t GEOSSTRtree;
typedef void (*GEOSQueryCallback)(void *item, void *userdata);
typedef int (*GEOSDistanceCallback)(
    const void* item1,
    const void* item2,
    double* distance,
    void* userdata);
typedef void (GEOSInterruptCallback)(void);
typedef struct GEOSWKTReader_t GEOSWKTReader;
typedef struct GEOSWKTWriter_t GEOSWKTWriter;
typedef struct GEOSWKBReader_t GEOSWKBReader;
typedef struct GEOSWKBWriter_t GEOSWKBWriter;
typedef struct GEOSGeoJSONReader_t GEOSGeoJSONReader;
typedef struct GEOSGeoJSONWriter_t GEOSGeoJSONWriter;
extern char  GEOSDisjoint(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSTouches(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSIntersects(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSCrosses(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSWithin(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSContains(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSOverlaps(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSEquals(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSCovers(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSCoveredBy(const GEOSGeometry* g1, const GEOSGeometry* g2);
extern char  GEOSEqualsExact(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    double tolerance);
extern char  GEOSEqualsIdentical(
        const GEOSGeometry* g1,
        const GEOSGeometry* g2);
extern char  GEOSRelatePattern(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    const char *pat);
extern char  *GEOSRelate(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2);
extern char  GEOSRelatePatternMatch(
    const char *mat,
    const char *pat);
extern char  *GEOSRelateBoundaryNodeRule(
    const GEOSGeometry* g1,
    const GEOSGeometry* g2,
    int bnr);
extern const GEOSPreparedGeometry  *GEOSPrepare(const GEOSGeometry* g);
extern void  GEOSPreparedGeom_destroy(const GEOSPreparedGeometry* g);
extern char  GEOSPreparedContains(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedContainsXY(
        const GEOSPreparedGeometry* pg1,
        double x,
        double y);
extern char  GEOSPreparedContainsProperly(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedCoveredBy(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedCovers(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedCrosses(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedDisjoint(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedIntersects(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedIntersectsXY(
        const GEOSPreparedGeometry* pg1,
        double x,
        double y);
extern char  GEOSPreparedOverlaps(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedTouches(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern char  GEOSPreparedWithin(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern GEOSCoordSequence  *GEOSPreparedNearestPoints(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2);
extern int  GEOSPreparedDistance(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2,
    double *dist);
extern char  GEOSPreparedDistanceWithin(
    const GEOSPreparedGeometry* pg1,
    const GEOSGeometry* g2,
    double dist);
extern GEOSSTRtree  *GEOSSTRtree_create(size_t nodeCapacity);
extern int  GEOSSTRtree_build(GEOSSTRtree *tree);
extern void  GEOSSTRtree_insert(
    GEOSSTRtree *tree,
    const GEOSGeometry *g,
    void *item);
extern void  GEOSSTRtree_query(
    GEOSSTRtree *tree,
    const GEOSGeometry *g,
    GEOSQueryCallback callback,
    void *userdata);
extern const GEOSGeometry  *GEOSSTRtree_nearest(
    GEOSSTRtree *tree,
    const GEOSGeometry* geom);
extern const void  *GEOSSTRtree_nearest_generic(
    GEOSSTRtree *tree,
    const void* item,
    const GEOSGeometry* itemEnvelope,
    GEOSDistanceCallback distancefn,
    void* userdata);
extern void  GEOSSTRtree_iterate(
    GEOSSTRtree *tree,
    GEOSQueryCallback callback,
    void *userdata);
extern char  GEOSSTRtree_remove(
    GEOSSTRtree *tree,
    const GEOSGeometry *g,
    void *item);
extern void  GEOSSTRtree_destroy(GEOSSTRtree *tree);
extern int  GEOSSegmentIntersection(
       double ax0, double ay0,
       double ax1, double ay1,
       double bx0, double by0,
       double bx1, double by1,
       double* cx, double* cy);
extern int  GEOSOrientationIndex(
    double Ax, double Ay,
    double Bx, double By,
    double Px, double Py);
extern GEOSWKTReader  *GEOSWKTReader_create(void);
extern void  GEOSWKTReader_destroy(GEOSWKTReader* reader);
extern GEOSGeometry  *GEOSWKTReader_read(
    GEOSWKTReader* reader,
    const char *wkt);
extern void  GEOSWKTReader_setFixStructure(
    GEOSWKTReader *reader,
    char doFix);
extern GEOSWKTWriter  *GEOSWKTWriter_create(void);
extern void  GEOSWKTWriter_destroy(
    GEOSWKTWriter* writer);
extern char  *GEOSWKTWriter_write(
    GEOSWKTWriter* writer,
    const GEOSGeometry* g);
extern void  GEOSWKTWriter_setTrim(
    GEOSWKTWriter *writer,
    char trim);
extern void  GEOSWKTWriter_setRoundingPrecision(
    GEOSWKTWriter *writer,
    int precision);
extern void  GEOSWKTWriter_setOutputDimension(
    GEOSWKTWriter *writer,
    int dim);
extern int   GEOSWKTWriter_getOutputDimension(GEOSWKTWriter *writer);
extern void  GEOSWKTWriter_setOld3D(
    GEOSWKTWriter *writer,
    int useOld3D);
extern GEOSWKBReader  *GEOSWKBReader_create(void);
extern void  GEOSWKBReader_destroy(
    GEOSWKBReader* reader);
extern void  GEOSWKBReader_setFixStructure(
    GEOSWKBReader *reader,
    char doFix);
extern GEOSGeometry  *GEOSWKBReader_read(
    GEOSWKBReader* reader,
    const unsigned char *wkb,
    size_t size);
extern GEOSGeometry  *GEOSWKBReader_readHEX(
    GEOSWKBReader* reader,
    const unsigned char *hex,
    size_t size);
extern GEOSWKBWriter  *GEOSWKBWriter_create(void);
extern void  GEOSWKBWriter_destroy(GEOSWKBWriter* writer);
extern unsigned char  *GEOSWKBWriter_write(
    GEOSWKBWriter* writer,
    const GEOSGeometry* g,
    size_t *size);
extern unsigned char  *GEOSWKBWriter_writeHEX(
    GEOSWKBWriter* writer,
    const GEOSGeometry* g,
    size_t *size);
extern int  GEOSWKBWriter_getOutputDimension(
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setOutputDimension(
    GEOSWKBWriter* writer,
    int newDimension);
extern int  GEOSWKBWriter_getByteOrder(
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setByteOrder(
    GEOSWKBWriter* writer,
    int byteOrder);
extern int  GEOSWKBWriter_getFlavor(
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setFlavor(
    GEOSWKBWriter* writer,
    int flavor);
extern char  GEOSWKBWriter_getIncludeSRID(
    const GEOSWKBWriter* writer);
extern void  GEOSWKBWriter_setIncludeSRID(
    GEOSWKBWriter* writer,
    const char writeSRID);
extern GEOSGeoJSONReader  *GEOSGeoJSONReader_create(void);
extern void  GEOSGeoJSONReader_destroy(GEOSGeoJSONReader* reader);
extern GEOSGeometry  *GEOSGeoJSONReader_readGeometry(
    GEOSGeoJSONReader* reader,
    const char *geojson);
extern GEOSGeoJSONWriter  *GEOSGeoJSONWriter_create(void);
extern void  GEOSGeoJSONWriter_destroy(GEOSGeoJSONWriter* writer);
extern char  *GEOSGeoJSONWriter_writeGeometry(
    GEOSGeoJSONWriter* writer,
    const GEOSGeometry* g,
    int indent);
extern GEOSGeometry  *GEOSSingleSidedBuffer(
    const GEOSGeometry* g,
    double width, int quadsegs,
    int joinStyle, double mitreLimit,
    int leftSide);
extern GEOSGeometry  *GEOSSingleSidedBuffer_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    double width, int quadsegs,
    int joinStyle, double mitreLimit,
    int leftSide);
extern GEOSContextHandle_t  initGEOS_r(
    GEOSMessageHandler notice_function,
    GEOSMessageHandler error_function);
extern void  finishGEOS_r(GEOSContextHandle_t handle);
extern GEOSGeometry  *GEOSGeomFromWKT_r(
    GEOSContextHandle_t handle,
    const char *wkt);
extern char  *GEOSGeomToWKT_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);
extern int  GEOS_getWKBOutputDims_r(
    GEOSContextHandle_t handle);
extern int  GEOS_setWKBOutputDims_r(
    GEOSContextHandle_t handle,
    int newDims);
extern int  GEOS_getWKBByteOrder_r(
    GEOSContextHandle_t handle);
extern int  GEOS_setWKBByteOrder_r(
    GEOSContextHandle_t handle,
    int byteOrder);
extern GEOSGeometry  *GEOSGeomFromWKB_buf_r(
    GEOSContextHandle_t handle,
    const unsigned char *wkb,
    size_t size);
extern unsigned char  *GEOSGeomToWKB_buf_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    size_t *size);
extern GEOSGeometry  *GEOSGeomFromHEX_buf_r(
    GEOSContextHandle_t handle,
    const unsigned char *hex,
    size_t size);
extern unsigned char  *GEOSGeomToHEX_buf_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g,
    size_t *size);
extern GEOSGeometry  *GEOSGeomFromWKT(const char *wkt);
extern char  *GEOSGeomToWKT(const GEOSGeometry* g);
extern int  GEOS_getWKBOutputDims(void);
extern int  GEOS_setWKBOutputDims(int newDims);
extern int  GEOS_getWKBByteOrder(void);
extern int  GEOS_setWKBByteOrder(int byteOrder);
extern GEOSGeometry  *GEOSGeomFromWKB_buf(const unsigned char *wkb, size_t size);
extern unsigned char  *GEOSGeomToWKB_buf(const GEOSGeometry* g, size_t *size);
extern GEOSGeometry  *GEOSGeomFromHEX_buf(const unsigned char *hex, size_t size);
extern unsigned char  *GEOSGeomToHEX_buf(const GEOSGeometry* g, size_t *size);
extern GEOSGeometry  *GEOSUnionCascaded(const GEOSGeometry* g);
extern GEOSGeometry  *GEOSUnionCascaded_r(
    GEOSContextHandle_t handle,
    const GEOSGeometry* g);