sandbox/geos/fp_geos_c.pas


function GEOSDisjoint(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSTouches(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSIntersects(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCrosses(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSWithin(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSContains(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSOverlaps(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSEquals(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCovers(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSCoveredBy(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSEqualsExact(g1: PGEOSGeometry; g2: PGEOSGeometry; tolerance: double): char; cdecl; external libgeos_c;
function GEOSEqualsIdentical(g1: PGEOSGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSRelatePattern(g1: PGEOSGeometry; g2: PGEOSGeometry; pat: pchar): char; cdecl; external libgeos_c;
function GEOSRelate(g1: PGEOSGeometry; g2: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOSRelatePatternMatch(mat: pchar; pat: pchar): char; cdecl; external libgeos_c;
function GEOSRelateBoundaryNodeRule(g1: PGEOSGeometry; g2: PGEOSGeometry; bnr: longint): pchar; cdecl; external libgeos_c;
function GEOSPrepare(g: PGEOSGeometry): PGEOSPreparedGeometry; cdecl; external libgeos_c;
procedure GEOSPreparedGeom_destroy(g: PGEOSPreparedGeometry); cdecl; external libgeos_c;
function GEOSPreparedContains(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedContainsXY(pg1: PGEOSPreparedGeometry; x: double; y: double): char; cdecl; external libgeos_c;
function GEOSPreparedContainsProperly(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCoveredBy(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCovers(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedCrosses(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedDisjoint(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedIntersects(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedIntersectsXY(pg1: PGEOSPreparedGeometry; x: double; y: double): char; cdecl; external libgeos_c;
function GEOSPreparedOverlaps(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedTouches(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedWithin(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): char; cdecl; external libgeos_c;
function GEOSPreparedNearestPoints(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry): PGEOSCoordSequence; cdecl; external libgeos_c;
function GEOSPreparedDistance(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry; dist: Pdouble): longint; cdecl; external libgeos_c;
function GEOSPreparedDistanceWithin(pg1: PGEOSPreparedGeometry; g2: PGEOSGeometry; dist: double): char; cdecl; external libgeos_c;

function GEOSSTRtree_create(nodeCapacity: Tsize_t): PGEOSSTRtree; cdecl; external libgeos_c;
function GEOSSTRtree_build(tree: PGEOSSTRtree): longint; cdecl; external libgeos_c;
procedure GEOSSTRtree_insert(tree: PGEOSSTRtree; g: PGEOSGeometry; item: pointer); cdecl; external libgeos_c;
procedure GEOSSTRtree_query(tree: PGEOSSTRtree; g: PGEOSGeometry; callback: TGEOSQueryCallback; userdata: pointer); cdecl; external libgeos_c;
function GEOSSTRtree_nearest(tree: PGEOSSTRtree; geom: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSTRtree_nearest_generic(tree: PGEOSSTRtree; item: pointer; itemEnvelope: PGEOSGeometry; distancefn: TGEOSDistanceCallback; userdata: pointer): pointer; cdecl; external libgeos_c;
procedure GEOSSTRtree_iterate(tree: PGEOSSTRtree; callback: TGEOSQueryCallback; userdata: pointer); cdecl; external libgeos_c;
function GEOSSTRtree_remove(tree: PGEOSSTRtree; g: PGEOSGeometry; item: pointer): char; cdecl; external libgeos_c;
procedure GEOSSTRtree_destroy(tree: PGEOSSTRtree); cdecl; external libgeos_c;

function GEOSSegmentIntersection(ax0: double; ay0: double; ax1: double; ay1: double; bx0: double; by0: double; bx1: double; by1: double; cx: Pdouble; cy: Pdouble): longint; cdecl; external libgeos_c;
function GEOSOrientationIndex(Ax: double; Ay: double; Bx: double; By: double; Px: double; Py: double): longint; cdecl; external libgeos_c;

function GEOSWKTReader_create: PGEOSWKTReader; cdecl; external libgeos_c;
procedure GEOSWKTReader_destroy(reader: PGEOSWKTReader); cdecl; external libgeos_c;
function GEOSWKTReader_read(reader: PGEOSWKTReader; wkt: pchar): PGEOSGeometry; cdecl; external libgeos_c;
procedure GEOSWKTReader_setFixStructure(reader: PGEOSWKTReader; doFix: char); cdecl; external libgeos_c;

function GEOSWKTWriter_create: PGEOSWKTWriter; cdecl; external libgeos_c;
procedure GEOSWKTWriter_destroy(writer: PGEOSWKTWriter); cdecl; external libgeos_c;
function GEOSWKTWriter_write(writer: PGEOSWKTWriter; g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
procedure GEOSWKTWriter_setTrim(writer: PGEOSWKTWriter; trim: char); cdecl; external libgeos_c;
procedure GEOSWKTWriter_setRoundingPrecision(writer: PGEOSWKTWriter; precision: longint); cdecl; external libgeos_c;
procedure GEOSWKTWriter_setOutputDimension(writer: PGEOSWKTWriter; dim: longint); cdecl; external libgeos_c;
function GEOSWKTWriter_getOutputDimension(writer: PGEOSWKTWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKTWriter_setOld3D(writer: PGEOSWKTWriter; useOld3D: longint); cdecl; external libgeos_c;

function GEOSWKBReader_create: PGEOSWKBReader; cdecl; external libgeos_c;
procedure GEOSWKBReader_destroy(reader: PGEOSWKBReader); cdecl; external libgeos_c;
procedure GEOSWKBReader_setFixStructure(reader: PGEOSWKBReader; doFix: char); cdecl; external libgeos_c;
function GEOSWKBReader_read(reader: PGEOSWKBReader; wkb: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSWKBReader_readHEX(reader: PGEOSWKBReader; hex: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSWKBWriter_create: PGEOSWKBWriter; cdecl; external libgeos_c;
procedure GEOSWKBWriter_destroy(writer: PGEOSWKBWriter); cdecl; external libgeos_c;
function GEOSWKBWriter_write(writer: PGEOSWKBWriter; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSWKBWriter_writeHEX(writer: PGEOSWKBWriter; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSWKBWriter_getOutputDimension(writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setOutputDimension(writer: PGEOSWKBWriter; newDimension: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getByteOrder(writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setByteOrder(writer: PGEOSWKBWriter; byteOrder: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getFlavor(writer: PGEOSWKBWriter): longint; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setFlavor(writer: PGEOSWKBWriter; flavor: longint); cdecl; external libgeos_c;
function GEOSWKBWriter_getIncludeSRID(writer: PGEOSWKBWriter): char; cdecl; external libgeos_c;
procedure GEOSWKBWriter_setIncludeSRID(writer: PGEOSWKBWriter; writeSRID: char); cdecl; external libgeos_c;

function GEOSGeoJSONReader_create: PGEOSGeoJSONReader; cdecl; external libgeos_c;
procedure GEOSGeoJSONReader_destroy(reader: PGEOSGeoJSONReader); cdecl; external libgeos_c;
function GEOSGeoJSONReader_readGeometry(reader: PGEOSGeoJSONReader; geojson: pchar): PGEOSGeometry; cdecl; external libgeos_c;

function GEOSGeoJSONWriter_create: PGEOSGeoJSONWriter; cdecl; external libgeos_c;
procedure GEOSGeoJSONWriter_destroy(writer: PGEOSGeoJSONWriter); cdecl; external libgeos_c;
function GEOSGeoJSONWriter_writeGeometry(writer: PGEOSGeoJSONWriter; g: PGEOSGeometry; indent: longint): pchar; cdecl; external libgeos_c;

function GEOSSingleSidedBuffer(g: PGEOSGeometry; width: double; quadsegs: longint; joinStyle: longint; mitreLimit: double; leftSide: longint): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSSingleSidedBuffer_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; width: double; quadsegs: longint; joinStyle: longint; mitreLimit: double; leftSide: longint): PGEOSGeometry; cdecl; external libgeos_c;
function initGEOS_r(notice_function: TGEOSMessageHandler; error_function: TGEOSMessageHandler): TGEOSContextHandle_t; cdecl; external libgeos_c;
procedure finishGEOS_r(handle: TGEOSContextHandle_t); cdecl; external libgeos_c;
function GEOSGeomFromWKT_r(handle: TGEOSContextHandle_t; wkt: pchar): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToWKT_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOS_getWKBOutputDims_r(handle: TGEOSContextHandle_t): longint; cdecl; external libgeos_c;
function GEOS_setWKBOutputDims_r(handle: TGEOSContextHandle_t; newDims: longint): longint; cdecl; external libgeos_c;
function GEOS_getWKBByteOrder_r(handle: TGEOSContextHandle_t): longint; cdecl; external libgeos_c;
function GEOS_setWKBByteOrder_r(handle: TGEOSContextHandle_t; byteOrder: longint): longint; cdecl; external libgeos_c;
function GEOSGeomFromWKB_buf_r(handle: TGEOSContextHandle_t; wkb: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToWKB_buf_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSGeomFromHEX_buf_r(handle: TGEOSContextHandle_t; hex: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToHEX_buf_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSGeomFromWKT(wkt: pchar): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToWKT(g: PGEOSGeometry): pchar; cdecl; external libgeos_c;
function GEOS_getWKBOutputDims: longint; cdecl; external libgeos_c;
function GEOS_setWKBOutputDims(newDims: longint): longint; cdecl; external libgeos_c;
function GEOS_getWKBByteOrder: longint; cdecl; external libgeos_c;
function GEOS_setWKBByteOrder(byteOrder: longint): longint; cdecl; external libgeos_c;
function GEOSGeomFromWKB_buf(wkb: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToWKB_buf(g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSGeomFromHEX_buf(hex: pbyte; size: Tsize_t): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSGeomToHEX_buf(g: PGEOSGeometry; size: Psize_t): pbyte; cdecl; external libgeos_c;
function GEOSUnionCascaded(g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;
function GEOSUnionCascaded_r(handle: TGEOSContextHandle_t; g: PGEOSGeometry): PGEOSGeometry; cdecl; external libgeos_c;

implementation



end.
